fixed typo in error message